src/objects/Opportunity/fields/forRecord__c.field-meta.xml
<CustomField>
    <fullName>forRecord__c</fullName>
    <label>forRecord</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>test</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>