src/objects/Opportunity/fields/picklistTest__c.field-meta.xml
<CustomField>
    <fullName>picklistTest__c</fullName>
    <label>picklistTest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>testGlobal14April</valueSetName>
    </valueSet>
</CustomField>