src/objects/Opportunity/fields/RT10Swap__c.field-meta.xml
<CustomField>
    <fullName>RT10Swap__c</fullName>
    <description>test</description>
    <formula>test__c  &amp; &quot; - &quot;  &amp;  Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RT10Swap</label>
    <type>Text</type>
</CustomField>