src/objects/Opportunity/fields/TestFieldForTranslation__c.field-meta.xml
<CustomField>
    <fullName>TestFieldForTranslation__c</fullName>
    <label>TestFieldForTranslation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>