src/objects/Opportunity/recordTypes/Core_A_S.recordType-meta.xml
<RecordType>
    <fullName>Core_A_S</fullName>
    <active>true</active>
    <businessProcess>salesOppotunity</businessProcess>
    <description>delta delta2 delta3 delta4</description>
    <label>Core_A_S</label>
</RecordType>