src/objects/Opportunity/recordTypes/Core_A_S1.recordType-meta.xml
<RecordType>
    <fullName>Core_A_S1</fullName>
    <active>false</active>
    <businessProcess>salesOppotunity</businessProcess>
    <label>Core_A_S1</label>
</RecordType>